# -*- coding: utf-8 -*-
[metadata]
name = blossoming
summary = 2D image segmentation based on UNET algorithm
description-file =
    README.md
author = Herearii Metuarea
author-email = herearii.metuarea@gmail.com
version = 0.0.1
license = MIT
home-page = https://github.com/hereariim/blossoming
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    blossoming

[entry_points]

deepaas.v2.model = 
    blossoming = blossoming.api

